--- a/EmployeeManagementSystem/Shared/NavMenu.razor
+++ b/EmployeeManagementSystem/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿\<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">EmployeeManagementSystem</a>
+        <a class="navbar-brand" href="">EMS</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,13 +15,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="employees">
+                <span class="oi oi-plus" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="homes">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Homes
             </NavLink>
         </div>
     </nav>
