--- a/EmployeeManagementSystem/_Imports.razor
+++ b/EmployeeManagementSystem/_Imports.razor
@@ -8,4 +8,7 @@
 @using Microsoft.JSInterop
 @using EmployeeManagementSystem
 @using EmployeeManagementSystem.Shared
+@using Blazorise.Components
+@using Blazorise.Snackbar
+@using Blazorise
 
